WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29632
Web Inspector: console.count and console.timeEnd crash when inspector is opened.
https://bugs.webkit.org/show_bug.cgi?id=29632
Summary
Web Inspector: console.count and console.timeEnd crash when inspector is opened.
Pavel Feldman
Reported
2009-09-22 02:29:48 PDT
Another "wrap-primitive-values"-related regression.
Attachments
patch
(1.45 KB, patch)
2009-09-22 02:36 PDT
,
Pavel Feldman
timothy
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2009-09-22 02:36:45 PDT
Created
attachment 39910
[details]
patch
Pavel Feldman
Comment 2
2009-09-22 09:59:12 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/inspector/InspectorFrontend.cpp Committed
r48637
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug