2009-09-22  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        Web Inspector: console.count and console.timeEnd
        crash when inspector is opened.

        https://bugs.webkit.org/show_bug.cgi?id=29632

        * inspector/InspectorFrontend.cpp:
        (WebCore::InspectorFrontend::addMessageToConsole):


Canonical link: https://commits.webkit.org/40200@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48637 268f45cc-cd09-0410-ab3c-d52691b4dbfc